force-app/main/default/objects/Playgroup__c/Playgroup__c.object-meta.xml
<CustomObject>
    <label>Playgroup</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Playgroup Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Playgroups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>