force-app/main/default/objects/Playgroup__c/fields/Did_Not_Attend_Playgroup__c.field-meta.xml
<CustomField>
    <fullName>Did_Not_Attend_Playgroup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did Not Attend Playgroup</label>
    <type>Checkbox</type>
</CustomField>