force-app/main/default/objects/Playgroup__c/fields/Playgroup_Color_Code__c.field-meta.xml
<CustomField>
    <fullName>Playgroup_Color_Code__c</fullName>
    <label>Playgroup Color Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>