force-app/main/default/objects/Playgroup__c/fields/Playgroup_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Playgroup_Date_Time__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Playgroup Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>