force-app/main/default/objects/Playgroup__c/fields/Playgroup_Notes_Text__c.field-meta.xml
<CustomField>
    <fullName>Playgroup_Notes_Text__c</fullName>
    <label>Playgroup Notes Text</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>